# polykit

./: .bazelrc  .gitattributes  .gitignore  BUILD  Dockerfile  HOWTO.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  alphabet_mapping.py  alphabet_mapping_test.py  autosolve.py  format.py  junkyard.txt  linear.py  lyndon.py  lyndon_test.py  polylog.py  polylog_gen.py  polylog_gen_test.py  polylog_legacy.py  profile.txt  run_dbg.bat  run_dbg.sh  shuffle.py  shuffle_test.py  solve.py  tensor.py  tensor_test.py  test_all.bat  test_extra.bat  test_extra.sh  test_lyndon.py  test_uti.py  util.py  word_algebra.py  word_coalgebra.py  workspace.cpp  workspace.py  (+14 more)
benchmark/: BUILD  benchmark_equations.cpp  benchmark_equations_cpp.sh  benchmark_equations_cpp_naive.sh  benchmark_qli.cpp  benchmark_qli.py  benchmark_qli_cpp.sh  benchmark_qli_cpp_naive.sh  benchmark_qli_hybrid.sh  benchmark_qli_pybind.sh
cpp/: .bazelrc  BUILD  HOWTO  HOWTO.md  WORKSPACE  example.cpp  (+21 more)
rust/: Cargo.toml  build.rs
rust/linbox_bindings/: bindings.cpp  bindings.h  bindings.rs  build.sh
rust/math_format/: Cargo.toml
rust/math_format/src/: lib.rs  unicode_alphabets.rs
rust/math_format_macro/: Cargo.toml
rust/math_format_macro/src/: lib.rs  parse_latex.rs
rust/src/: base.rs  main.rs  math.rs  polylog.rs
rust/src/base/: enumerator.rs  string_tools.rs  timer.rs  util.rs  vector_like.rs
rust/src/math/: algebra.rs  delta.rs  delta_ratio.rs  expr_matrix_builder.rs  gamma.rs  linalg.rs  linear.rs  lyndon.rs  shuffle.rs  vector_space.rs  x.rs
rust/src/polylog/: grqli.rs  polylog_space.rs  qli.rs
(+481 files in other folders)
