bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_python", version = "0.35.0")
bazel_dep(name = "pybind11_bazel", version = "2.12.0")

bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "googletest", version = "1.15.2")

PYTHON_VERSION = "3.11.9"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_pip_deps",
    python_version = PYTHON_VERSION,
    requirements_lock = "//pybind:requirements_lock.txt",
)
use_repo(pip, "my_pip_deps")
