[workspace]
members = [
    ".",
    "math_format_macro",
]

[package]
name = "polykit"
version = "0.1.0"
authors = ["Andrei Matveiakin <a.matveiakin@gmail.com>"]
edition = "2021"

[dependencies]
bitvec = "1.0.0"
itertools = "0.10.3"
num = "0.4"
smallvec = { version = "1.8.0", features = ["union", "const_generics", "const_new"] }
trait-set = "0.3.0"

math_format_macro = { path = "math_format_macro" }
